src/objects/Trade_Ally_Event__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendees_Enrolled__c</fullName>
        <label>Attendees Enrolled</label>
        <summaryForeignKey>Event_Attendee__c.Trade_Ally_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number__c</fullName>
        <label>Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Series__c</fullName>
        <label>Event Series</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Topic__c</fullName>
        <label>Event Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Certification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maximum_Attendees__c</fullName>
        <label>Maximum Attendees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Presenter_Name__c</fullName>
        <label>Presenter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specialty</label>
        <referenceTo>Specialty__c</referenceTo>
        <relationshipLabel>Trade Ally Events</relationshipLabel>
        <relationshipName>Trade_Ally_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Spots_Remaining__c</fullName>
        <formula>Maximum_Attendees__c -  Attendees_Enrolled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spots Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Incorporated</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eastern</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>Pacific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Trade Ally Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trade Ally Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>An_entered_date_is_in_the_future</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISNEW() , ( Date__c  &lt;  TODAY()), false)</errorConditionFormula>
        <errorMessage>A date should be in the future</errorMessage>
    </validationRules>
</CustomObject>